--- a/pdftotxt.yaml
+++ b/pdftotxt.yaml
@@ -11,9 +11,9 @@ Resources:
       Description: ''
       MemorySize: 512
       Timeout: 900
-      Role: 'arn:aws:iam::844028273225:role/lambda_s3'
+      Role: 'arn:aws:iam::626581302272:role/pgcc-lamdaopensearchrole'
       Environment:
         Variables:
           TARGET_BUCKET: gl-inter-store
       Layers:
-        - 'arn:aws:lambda:ap-northeast-1:844028273225:layer:tika:1'
+        - 'arn:aws:lambda:us-east-1:626581302272:function:pdftotext'
