--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,10 +5,10 @@ phases:
       python: 3.10
   build:
     commands:
-      - aws cloudformation package --template-file pdftotxt.yaml --s3-bucket artifacts-bucket-gl --output-template-file lambdaoutput.yaml
+      - aws cloudformation package --template-file upload-to-search.yaml --s3-bucket artifacts-bucket-gl --output-template-file upload.yaml
 
 artifacts:
   type: zip
   files:
-    - pdftotxt.yaml
-    - lambdaoutput.yaml
+    - upload-to-search.yaml
+    - upload.yaml
