--- a/pdftotxt.yaml
+++ b/pdftotxt.yaml
@@ -14,6 +14,6 @@ Resources:
       Role: 'arn:aws:iam::626581302272:role/pgcc-lamdaopensearchrole'
       Environment:
         Variables:
-          TARGET_BUCKET: gl-inter-store
+          TARGET_BUCKET: pgcc-bucket-moses
       Layers:
         - 'arn:aws:lambda:us-east-1:626581302272:function:pdftotext'
